fixed font sizes
font sizes were too big

--- a/frontend/src/components/ExpenseChip/ExpenseChip.css
+++ b/frontend/src/components/ExpenseChip/ExpenseChip.css
@@ -1,8 +1,7 @@
 .record-chip {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
     padding: 15px 20px 21px 20px;
     border-radius: 25px;
     margin-top: -6px;
@@ -26,10 +25,23 @@
     flex-direction: column;
     gap: 5px; 
     align-items: flex-start;
+    align-self: flex-start;
+    flex: 1 1 20%;
+}
+
+.flex-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-self:center;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex: 1 5 0;
 }
 
 .record-chip p {
     color: white;
+    font-weight: 300;
 }
 
 .category-tag {
