--- a/frontend/src/components/ToggleBtns/ToggleBtns.css
+++ b/frontend/src/components/ToggleBtns/ToggleBtns.css
@@ -17,7 +17,6 @@
   font-family: "Josefin Sans";
   font-weight: 500;
   margin-top: 4px;
-  font-size: 1rem;
 }
 
 .toggle-btn.active {
