--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -143,13 +143,13 @@ body {
   background-color: rgb(242, 234, 222);
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 400;
-  color: #452F1F;
+  color: rgba(69,47,31,0.8);
   min-height: 100vh;
   width: 100%;
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 14px;
   text-align: center;
 }
 
@@ -197,7 +197,7 @@ footer {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 30px;
   padding: 1rem;
   text-align: center;
   font-family: "Cal Sans", sans-serif;
@@ -214,7 +214,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1em;
+    font-size: 15px;
     font-weight: 400;
     font-family: "Cal Sans", sans-serif;
     letter-spacing: 8%;
@@ -279,13 +279,14 @@ button {
 #bill-form-btn,
 #expense-form-btn {
   background-color: #96a86d;
-  box-shadow: inset 0 -6px #707E52;
+  box-shadow: inset 0 -5px #707E52;
   filter: drop-shadow(0 4px 3px rgba(0,0,0,0.2));
   border-radius: 25px;
-  padding: 10px 18px 16px 18px;
+  padding: 6px 15px 11px 15px;
   margin-top: -6px;
-  font-size: 18px;
-  letter-spacing: 0.1rem;
+  font-size: 14px;
+  font-family: "Josefin Sans";
+  font-weight: 450;
   color: white;
 }
 
